==================================================================
User visible changes for UPX
==================================================================

Changes in 4.2.0 (XX XXX 2023):
  * bug fixes - see https://github.com/upx/upx/milestone/13
  * add support for NO_COLOR env var; see https://no-color.org/

Changes in 4.1.0 (08 Aug 2023):
  * ELF: handle shared libraries with more than 2 PT_LOAD segments
  * bug fixes - see https://github.com/upx/upx/milestone/11

Changes in 4.0.2 (30 Jan 2023):
  * bug fixes - see https://github.com/upx/upx/milestone/9

Changes in 4.0.1 (16 Nov 2022):
  * bug fixes - see https://github.com/upx/upx/milestone/8

Changes in 4.0.0 (28 Oct 2022):
  * Switch to semantic versioning
  * SECURITY NOTES: emphasize the security context in the docs
  * Support easy building from source code with CMake
  * Support easy rebuilding the stubs from source with Podman/Docker
  * Add integrated doctest C++ testing framework
  * Add support for EFI files (PE x86; Kornel Pal)
  * win32/pe and win64/pe: set correct SizeOfHeaders in the PE header
  * bug fixes - see https://github.com/upx/upx/milestone/6
  * bug fixes - see https://github.com/upx/upx/milestone/7

Changes in 3.96 (23 Jan 2020):
  * bug fixes - see https://github.com/upx/upx/milestone/5

Changes in 3.95 (26 Aug 2018):
  * Flag --android-shlib to work around bad design in Android
  * Flag --force-pie when ET_DYN main program is not marked as DF_1_PIE
  * Better compatibility with varying layout of address space on Linux
  * Support for 4 PT_LOAD layout in ELF generated by binutils-2.31
  * bug fixes, particularly better diagnosis of malformed input
  * bug fixes - see https://github.com/upx/upx/milestone/4

Changes in 3.94 (12 May 2017):
  * Add support for arm64-linux (aka "aarch64").
  * Add support for --lzma compression on 64-bit PowerPC (Thierry Fauck).
  * For Mach, "upx -d" will unpack a prefix of the file (and warn).
  * Various improvements to the ELF formats.