@@ -724,7 +724,7 @@ extern const char *progname;
 bool main_set_exit_code(int ec);
 int main_get_options(int argc, char **argv);
 void main_get_envoptions();
-int upx_main(int argc, char *argv[]);
+int upx_main(int argc, char *argv[]) may_throw;
 
 // msg.cpp
 void printSetNl(int need_nl) noexcept;
@@ -741,8 +741,8 @@ void infoHeader();
 void infoWriting(const char *what, upx_int64_t size);
 
 // work.cpp
-void do_one_file(const char *iname, char *oname);
-int do_files(int i, int argc, char *argv[]);
+void do_one_file(const char *iname, char *oname) may_throw;
+int do_files(int i, int argc, char *argv[]) may_throw;
 
 // help.cpp
 extern const char gitrev[];
